5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1590_2895.log
== TEST (2019-03-29 18:27:32) 
-- CODE:
var = input("5")
var2 = input("80")
var3 = input("70")
print("var" + var2 + var3)



-- OUTPUT:
var45.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:27:36) 
-- CODE:
var = input("5")
var2 = input("80")
var3 = input("70")
print("var" + var2 + var3)



-- EXECUTION TIME:
0.132743
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
var45.078.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
var67.095.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
var975.0321.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:28:14) 
-- CODE:
var = int(input("5")
var2 = float(input("80.7"))
var3 = int(input("70"))
print("var" + var2 + var3)



-- ERROR:
File "XXXX", line 2
    var2 = float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:28:30) 
-- CODE:
var = int(input("5")
var2 = float(input("100.0"))
var3 = int(input("70"))
print("var" + var2 + var3)



-- ERROR:
File "XXXX", line 2
    var2 = float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:28:37) 
-- CODE:
var = int(input("5")
var2 = float(input("100,6"))
var3 = int(input("70"))
print("var" + var2 + var3)



-- ERROR:
File "XXXX", line 2
    var2 = float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:28:42) 
-- CODE:
var = int(input("5")
var2 = float(input("100"))
var3 = int(input("70"))
print("var" + var2 + var3)



-- ERROR:
File "XXXX", line 2
    var2 = float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:28:48) 
-- CODE:
var = int(input("5")
var2 = int(input("100"))
var3 = int(input("70"))
print("var" + var2 + var3)



-- ERROR:
File "XXXX", line 2
    var2 = int(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:31:43) 
-- CODE:
var = int(input("5")
var2 = int(input("100"))
var3 = int(input("70"))
print("var" + var2 + var3)
# isto é um comentario



-- ERROR:
File "XXXX", line 2
    var2 = int(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:34:10) 
-- CODE:
var = int(input(5))
print(var)


-- OUTPUT:
512
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:34:12) 
-- CODE:
var = int(input(5))
print(var)


-- EXECUTION TIME:
0.196238
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
512
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
510
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:34:41) 
-- CODE:
var = int(input(5))
print(5 + 100)


-- OUTPUT:
5105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:34:44) 
-- CODE:
var = int(input(5))
print(5 + 100)


-- EXECUTION TIME:
0.135684
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
5105
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
5105
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5105
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:35:56) 
-- CODE:
var = input(5)
print(100)


-- OUTPUT:
5100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:35:57) 
-- CODE:
var = input(5)
print(100)


-- EXECUTION TIME:
0.130478
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
5100
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
5100
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:41:48) 
-- CODE:
var = input(5)
var2 = int(input(100))
var3 + float(input(40.0))
print(var + var2 + var3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input(100))
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:41:52) 
-- CODE:
var = input(5)
var2 = int(input(100))
var3 + float(input(40.0))
print(var + var2 + var3)

-- EXECUTION TIME:
0.140772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 2, in <module>
    var2 = int(input(100))
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:43:22) 
-- CODE:
var = input(5)
var2 = 100
var3 = 40.0
print(var + var2 + var3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var + var2 + var3)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:43:23) 
-- CODE:
var = input(5)
var2 = 100
var3 = 40.0
print(var + var2 + var3)

-- EXECUTION TIME:
0.114719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    print(var + var2 + var3)
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:43:46) 
-- CODE:
var = 5
var2 = 100
var3 = 40.0
print(var + var2 + var3)

-- OUTPUT:
145.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:43:46) 
-- CODE:
var = 5
var2 = 100
var3 = 40.0
print(var + var2 + var3)

-- OUTPUT:
145.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:43:48) 
-- CODE:
var = 5
var2 = 100
var3 = 40.0
print(var + var2 + var3)

-- EXECUTION TIME:
0.13292
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
145.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
145.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
145.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:05:17) 
-- CODE:
q = int(input("Digite quantidade de jogos encomendados"))
u = float(input("Digite o valor do jogo"))
r = float(input("Digite o valor do frete"))
preçototal = q*u + i
print(preçototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preçototal = q*u + i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:06:01) 
-- CODE:
q = int(input("Digite quantidade de jogos encomendados"))
u = float(input("Digite o valor do jogo"))
r = float(input("Digite o valor do frete"))
preçototal = q*u + i
print(preçototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preçototal = q*u + i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:06:39) 
-- CODE:
q = int(input("Digite quantidade de jogos encomendados: "))
u = float(input("Digite o valor do jogo: "))
r = float(input("Digite o valor do frete: "))
preçototal = q*u + i
print(preçototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preçototal = q*u + i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:07:28) 
-- CODE:
q = int(input("Digite quantidade de jogos encomendados:"))
u = float(input("Digite o valor do jogo:"))
r = float(input("Digite o valor do frete:"))
preçototal = q*u + r
print(preçototal)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:07:49) 
-- CODE:
q = int(input("Digite quantidade de jogos encomendados:"))
u = float(input("Digite o valor do jogo:"))
r = float(input("Digite o valor do frete:"))
preçototal = q*u + r
print(preçototal)
-- EXECUTION TIME:
0.142724
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
